# Hadol-s-PS

./: .gitignore  CMakeLists.txt  README.md  create_problem.py  new_problem.sh  push_all.sh  submit_problem.sh  template.cpp
backtracking/: 15649.cpp  15650.cpp  15651.cpp  15652.cpp  15654.cpp
bfs/: 10026.cpp  1012.cpp  1389.cpp  13913.cpp  14226.cpp  14940.cpp  21736.cpp  2178.cpp
binary_search/: 1920.cpp  2776.cpp
bruteforce/: 1107.cpp  2231.cpp
data_structure/: 10773.cpp  11279.cpp  1168.cpp  14425.cpp  1715.cpp
dp/: 1123.cpp
graph/: 11724.cpp
math/: 14626.cpp  18110.cpp  28702.cpp
simulation/: 1764.cpp
sorting/: 1181.cpp  1427.cpp  2587.cpp  2750.cpp  2752.cpp  3273.cpp
string/: 10102.cpp  1334.cpp  16500.cpp  27866.cpp  31403.cpp
